Refactor AutoOpListener